removed  audio track play is available if added to file

--- a/JS-FRONTEND/frontEnd/style.css
+++ b/JS-FRONTEND/frontEnd/style.css
@@ -1,6 +1,13 @@
 /**********************************************
 *** GENERAL
 **********************************************/
+.player{
+
+  opacity: 0.1;
+  position: fixed;
+    bottom: 0;
+  left: 0;
+}
 
 .final-score {
   position: absolute;
