--- a/JS-FRONTEND/frontEnd/style.css
+++ b/JS-FRONTEND/frontEnd/style.css
@@ -1,13 +1,13 @@
 /**********************************************
 *** GENERAL
 **********************************************/
-.player{
+/* .player{
 
   opacity: 0.1;
   position: fixed;
     bottom: 0;
   left: 0;
-}
+} */
 
 .final-score {
   position: absolute;
