--- a/JS-FRONTEND/frontEnd/style.css
+++ b/JS-FRONTEND/frontEnd/style.css
@@ -89,6 +89,7 @@ body {
     background-color: #fff;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
+    border-radius: 02px 02px 02px 02px;
 }
 
 .player-0-panel,
@@ -97,6 +98,7 @@ body {
     float: left;
     height: 600px;
     padding: 100px;
+
 }
 
 
@@ -125,7 +127,7 @@ body {
 }
 
 .active { background-color:
-  rgb(233, 233, 233); }
+  rgba(129, 105, 82, 0.4); }
 .active .player-name { font-weight: 300; }
 
 .active .player-name::after {
@@ -139,6 +141,7 @@ body {
 }
 
 .player-current-box {
+  border-radius: 02px 02px 02px 02px;
     background-color: #EB4D4D;
     color: #fff;
     position: center;
@@ -199,6 +202,7 @@ i {
 .btn-hold { top: 467px;}
 
 .dice {
+      border-radius: 02px 02px 02px 02px;
     position: absolute;
     left: 50%;
     top: 178px;
