--- a/JS-FRONTEND/frontEnd/style.css
+++ b/JS-FRONTEND/frontEnd/style.css
@@ -111,7 +111,7 @@ body {
 }
 
 .wrapper {
-    width: 800px;
+    width: 1200px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -120,19 +120,28 @@ body {
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     border-radius: 02px 02px 02px 02px;
+
 }
 
-.player-0-panel,
-.player-1-panel {
+.player-0-panel {
     width: 50%;
     float: left;
     height: 600px;
     padding: 100px;
-
+    background-image: url("dice/geralt.png");
+    background-position: bottom -100px right 0;
+    background-repeat: no-repeat;
 }
 
-
-
+.player-1-panel{
+  width: 50%;
+  float: left;
+  height: 600px;
+  padding: 100px;
+background-image: url("dice/yennifer.png");
+background-position: bottom -100px right -670px;
+background-repeat: no-repeat;
+}
 /**********************************************
 *** PLAYERS
 **********************************************/
@@ -166,7 +175,7 @@ body {
     position: absolute;
     color: #EB4D4D;
     top: -10px;
-    right: -55px;
+    right: 50px;
 
 }
 
@@ -176,7 +185,7 @@ body {
     color: #fff;
     position: center;
     top: 400px;
-    width: 50%;
+    width: 25%;
     margin: 0 auto;
     padding: 12px;
     text-align: center;
@@ -227,7 +236,39 @@ i {
     transition: margin 0.3s;
 }
 
-.btn-new { top: 45px;}
+.bird{
+  top: -20px;
+  left:-28px;
+  position: fixed;
+  height:60px;
+   transform: rotate(-07deg)
+  /* background:url('dice/cdpr.png');
+  background-size:100px;
+  background-repeat: no-repeat; */
+
+}
+.geralt{
+  top: -10px;
+  left:-750px;
+  position: fixed;
+  height:820px;
+  /* background:url('dice/cdpr.png');
+  background-size:100px;
+  background-repeat: no-repeat; */
+
+}
+
+.yennifer{
+  top: -10px;
+  left: 550px;
+  position: fixed;
+  height:820px;
+  /* background:url('dice/cdpr.png');
+  background-size:100px;
+  background-repeat: no-repeat; */
+
+}
+.btn-new { top: 35px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
